Safely escaping the location url to avoid decoding errors