@@ -11,24 +11,25 @@ import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 
 public class HttpGetRequest implements HttpRequest {
 
     private static final Logger logger = LoggerFactory.getLogger(HttpGetRequest.class);
     private final URI uri;
+    private final ConnectionFactory connectionFactory;
 
 
-    public HttpGetRequest(URI uri) {
+    public HttpGetRequest(URI uri, ConnectionFactory connectionFactory) {
         this.uri = uri;
-
+        this.connectionFactory = connectionFactory;
     }
+
 
     @Override
     public HttpResponse execute() throws IOException, URISyntaxException {
 
-        HttpURLConnection connection = (HttpURLConnection) new URL(uri.toASCIIString()).openConnection();
+        HttpURLConnection connection = connectionFactory.createConnection(new URI(uri.toASCIIString()));
 
         connection.setRequestMethod("GET");
         connection.setInstanceFollowRedirects(false);
@@ -45,13 +46,17 @@ public class HttpGetRequest implements HttpRequest {
         return new HttpResponse(connection.getResponseCode(), dstURI);
     }
 
-    private URI extractDestinationUri(HttpURLConnection connection, URI initialLocation) throws URISyntaxException, UnsupportedEncodingException {
-        String locationHeaderField = connection.getHeaderField("location");
-        URI location = new URI(locationHeaderField);
 
-        if (containsUnicodeCharacters(locationHeaderField)) {
-            logger.warn("Header field 'location' contains unicode characters, trying to decode them. ({})", locationHeaderField);
-            location = escapeUnicodeCharacters(locationHeaderField, extractCharacterEncoding(connection));
+    private URI extractDestinationUri(HttpURLConnection connection, URI initialLocation) throws URISyntaxException, UnsupportedEncodingException {
+        String locationHeader = connection.getHeaderField("location");
+        URI location;
+
+
+        if (containsUnicodeCharacters(locationHeader)) {
+            logger.warn("Redirect destination {} contains non ASCII characters (as required by the standard)", connection.getURL());
+            location = new URI(SafeStringEncoder.encodeString(locationHeader));
+        } else {
+            location = new URI(locationHeader);
         }
 
         if (location.isAbsolute()) {
@@ -66,21 +71,6 @@ public class HttpGetRequest implements HttpRequest {
             if (locationHeaderField.charAt(i) >= 128) return true;
         }
         return false;
-    }
-
-    private URI escapeUnicodeCharacters(String locationHeaderField, String encoding) throws UnsupportedEncodingException, URISyntaxException {
-        final String locationWithOriginalEncoding = new String(locationHeaderField.getBytes(), encoding != null ? encoding : "UTF-8");
-        return new URI(new URI(locationWithOriginalEncoding).toASCIIString());
-    }
-
-    private String extractCharacterEncoding(HttpURLConnection connection) {
-        if (connection.getContentType() != null) {
-            String[] tokens = connection.getContentType().split("=");
-            if (tokens.length > 1) {
-                return tokens[1];
-            }
-        }
-        return null;
     }
 
 }
